# Smart-Green-House-System

./: README.md  index.html  ongoing.c  progress.c
C code/: tool_set_config.json
C code/Green/components/LCD/: CMakeLists.txt
C code/Green/components/LCD/include/: LCD.h  lcd_i2c.c
C code/Green/components/PIR/: CMakeLists.txt
C code/Green/components/PIR/include/: PIR.h
C code/Green/components/Servo/: CMakeLists.txt
C code/Green/components/Servo/include/: Servo.h
C code/Green/components/dht11/: CMakeLists.txt  dht11.c
C code/Green/components/soilmoisture/: soilmoisture.c
C code/Green/main/: CMakeLists.txt  main.c
C code/wps/: sdkconfig
C code/wps/main/: wps.c
Final_C/components/LCD/: LCD.c
Final_C/components/LCD/include/: lcd_i2c.h
Final_C/components/PIR/: PIR.c
Final_C/components/Servo/: Servo.c
Final_C/components/dht11/include/: dht11.h
Final_C/components/soilmoisture/: CMakeLists.txt
Final_C/components/soilmoisture/include/: soilmoisture.h
Final_C/main/: CMakeLists.txt  main.c
MINI PROJECT/: .firebaserc  data.json
MINI PROJECT/.github/workflows/: firebase-hosting-pull-request.yml
MINI PROJECT/public/: index.html
MINI PROJECT/smart_green_house/: CMakeLists.txt
MINI PROJECT/smart_green_house/main/: main.c
